working on chart.js labels

--- a/Frontend/src/app/rotelle/rotelle.component.html
+++ b/Frontend/src/app/rotelle/rotelle.component.html
@@ -1,4 +1,5 @@
-
+<script>https://unpkg.com/chart.js-plugin-labels-dv/dist/chartjs-plugin-labels.min.js
+</script>
 <div id="chart">
     <canvas id="rotelle"></canvas>
 </div>
