--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="width: 300px; height: 300px;">
+<div class="container" style="width: 500px; height: 500px; right: -900px; position: relative;">
   <app-rotelle></app-rotelle>
 </div>
 
