--- a/Frontend/src/app/rotelle/rotelle.component.html
+++ b/Frontend/src/app/rotelle/rotelle.component.html
@@ -1,7 +1,4 @@
-<div *ngFor="let play of players">
-    {{play | json}}
+<div id="divChart">
+    <canvas id="myChart" width="400" height="400"></canvas>
 </div>
 
-<!-- <div *ngFor="let player of players">
-    {{player | json}}
-</div> -->
