--- a/Frontend/src/app/rotelle/rotelle.component.html
+++ b/Frontend/src/app/rotelle/rotelle.component.html
@@ -1,4 +1,4 @@
-<div id="divChart">
-    <canvas id="myChart" width="400" height="400"></canvas>
+<div style="width: 50%">
+    <canvas id="canvas"></canvas>
 </div>
 
