--- a/Frontend/src/app/bundesliga/bundesliga.component.html
+++ b/Frontend/src/app/bundesliga/bundesliga.component.html
@@ -6,10 +6,12 @@
     </select>
 </div>
 
-<div style="margin: auto; width: 50%; border: 3px solid; padding: 10px;">
+<div style="margin: auto; width: 50%; border: 3px solid; padding: 10px;" >
     Player ID: {{PlayerSelected}}
+    <canvas id="canvas" style="width: 50%; margin: auto;" >{{chart}}</canvas>
 </div>
 
-<div>
+<div >
     {{percentilesId | json}}
 </div>
+
